--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,6 +82,8 @@ jobs:
           echo "src-git-full luci https://git.openwrt.org/project/luci.git;openwrt-23.05" >> feeds.conf
           echo "src-git-full routing https://git.openwrt.org/feed/routing.git;openwrt-23.05"  >> feeds.conf
           git clone -b master https://github.com/${{ github.repository }}.git package/downloads/luci-app-droidnet
+          chmod +x package/downloads/luci-app-droidnet/root/etc/init.d/droidnet package/downloads/luci-app-droidnet/root/usr/share/droidnet/monitoring
+          rm package/downloads/luci-app-droidnet/htdocs/luci-static/resources/view/droidnet/*.js.o
           ./scripts/feeds update -a
           echo "CONFIG_PACKAGE_luci-app-droidnet=m" > .config
           ./scripts/feeds install -d n luci-app-droidnet
