--- a/root/usr/share/rpcd/acl.d/luci-app-droidnet.json
+++ b/root/usr/share/rpcd/acl.d/luci-app-droidnet.json
@@ -4,7 +4,8 @@
 		"read": {
 			"file": {
 				"/var/log/droidnet.log": [ "read" ],
-				"/usr/bin/adb": [ "exec" ]
+				"/usr/bin/adb": [ "exec" ],
+				"/usr/bin/pgrep": [ "exec" ]
 			},
 			"uci": [ "droidnet" ]
 		},
